@@ -22,12 +22,12 @@ Role('JooseX.Namespace.Depended', {
             
             extend = extend || {}
             
-            var summaredDeps = this.collectAllDeps(extend)
-            
+            var summaredDeps    = this.collectAllDeps(extend)
+            var currentModule   = this.getCurrent()
             
             var resource = JooseX.Namespace.Depended.Manager.my.getResource({
-                type : 'joose',
-                token : name
+                type    : 'joose',
+                token   : Joose.S.saneSplit(currentModule.meta.name, '.').concat(name).join('.')
             })
             
             
