@@ -63,5 +63,6 @@ Harness.start(
     '111_delayed_deps.t.js',
     '120_dep_from_static_files.t.js',
     '121_preloaded_dep_from_static_files.t.js',
-    '130_dependencies_in_has.t.js'
+    '130_dependencies_in_has.t.js',
+    '140_deps_in_classes_from_modules.t.js'
 )
