@@ -1,0 +1,10 @@
+Module('com', function (m) {
+    
+    Module('nilbog.game.client', function (m) {
+        
+        Class('MessageWindow', {
+            has: {},
+            methods: {}
+        })
+    })
+})
